# lua

./: .gitignore
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  lua_jni.c
android/app/src/main/kotlin/com/example/luaandroid/: MainActivity.kt
android/app/src/main/kotlin/io/github/anaruto/lua/: LuaCallback.kt  LuaException.kt  LuaState.kt  LuaType.kt
android/app/src/main/kotlin/lua/: LuaCallback.kt  LuaException.kt  LuaState.kt  LuaType.kt
android/gradle/: libs.versions.toml
